tests/checker/bad/lib/TestLib3.scillib
scilla_version 0

import ListUtils

library TestLib3

let sort_uint32 = @list_sort Uint32
